--- a/Report/report.tex
+++ b/Report/report.tex
@@ -27,7 +27,7 @@ Sometimes, objects that need to be allocated are of the same (or similar) size, 
 
 Storing a number of blocks of a certain size is not enough -- we also need to keep track of which ones are available to be allocated. Our housekeeping is done using a linked list of chunks that uses the unallocated block for its data by storing a pointer to the next free block, see figure~\ref{fig:pool_free_blocks}. When allocating, an all-or-nothing approach is used in the sense that an entire block is allocated -- never parts of one. Of course, the user may choose to store less data in the given block, but the unused data is still considered to be allocated.
 
-\begin{figure}[h]
+\begin{figure}[b]
     \centering
     \begin{tikzpicture}
         % empty blocks
@@ -61,15 +61,13 @@ Storing a number of blocks of a certain size is not enough -- we also need to ke
         \foreach \p in {n1,n2,n3}
             \node[above] at (\p) {next};
     \end{tikzpicture}
-    \caption{Free block tracking. Gray blocks are occupied. A pointer inside the pool allocator keeps track of the first block. Each block uses the storage to store a pointer to the next empty block, thereby forming a linked list. The tail element stores a null pointer to indicate end of list.}
+    \caption{Free block tracking. Gray blocks are occupied. A pointer inside the pool allocator keeps track of the first block. Each block uses the storage to store a pointer to the next empty block, thereby forming a linked list. The tail element stores a null pointer to indicate end of the list.}
     \label{fig:pool_free_blocks}
 \end{figure}
 
 Allocation and deallocation are very simple with the pool allocator and is performed in $O(1)$ complexity. Allocation is a matter of consuming a free block and making sure that the list of free blocks is properly updated. We do this by allocating the first free block and setting the head of the list to be the second free block. Similarly, deallocation is done by putting the returned block at the head of the list and connecting it to the previous head. See figures~\ref{fig:pool_allocation} and~\ref{fig:pool_deallocation} for details on how this is done.
 
-\textbf{\large två figurer som visar hur allokering och avallokering uppdaterar listan}
-
-\begin{figure}[h]
+\begin{figure}[tb]
     \begin{subfigure}{.5\textwidth}
         \centering
         \begin{tikzpicture}[x=0.5cm, y=0.5cm]
@@ -140,6 +138,80 @@ Allocation and deallocation are very simple with the pool allocator and is perfo
     \end{subfigure}
     \caption{When allocating, the block at the head of the free list (highlighted) is returned, and its next block becomes the new head.}
     \label{fig:pool_allocation}
+\end{figure}
+
+\begin{figure}[tb]
+    \begin{subfigure}{.5\textwidth}
+        \centering
+        \begin{tikzpicture}[x=0.5cm, y=0.5cm]
+            % empty blocks
+            \draw (4,0) rectangle (5,1);
+            \draw (5,0) rectangle (6,1);
+            \draw (7,0) rectangle (8,1);
+            % occupied blocks
+            \draw[fill=gray!50,draw=black] (0,0) rectangle (1,1);
+            \draw[fill=gray!50] (1,0) rectangle (2,1);
+            \draw[fill=gray!50] (2,0) rectangle (3,1);
+            \draw[fill=gray!50] (3,0) rectangle (4,1);
+            \draw[fill=gray!50] (6,0) rectangle (7,1);
+            \draw[fill=gray!50] (8,0) rectangle (9,1);
+            \draw[fill=gray!50] (9,0) rectangle (10,1);
+            % highlight block
+            \draw[fill=red!30] (9,0) rectangle (10,1);
+            % declare points for arrow start/end and text positions
+            \node at (0,-0.5) (head) {head};
+            \node at (4.5,0) (b4_lower) {};
+            \node at (3,1.4) (n1) {};
+            \node at (4.5,1) (b4) {};
+            \node at (5,1.4) (n2) {};
+            \node at (5.5,1) (b5) {};
+            \node at (6.5,1.4) (n3) {};
+            \node at (7.5,1) (b7) {};
+            % draw arrows
+            \draw[->, out=0, in=-90] (head) to (b4_lower);
+            \draw[->] (b4) to[out=70,in=180] (n2) to[out=0,in=110] (b5);
+            \draw[->] (b5) to[in=180] (n3) to[out=0] (b7);
+        \end{tikzpicture}
+        \caption{Before freeing.}
+        \label{fig:pool_deallocation_before}
+    \end{subfigure}
+    \begin{subfigure}{.5\textwidth}
+        \centering
+        \begin{tikzpicture}[x=0.5cm, y=0.5cm]
+            % empty blocks
+            \draw (4,0) rectangle (5,1);
+            \draw (5,0) rectangle (6,1);
+            \draw (7,0) rectangle (8,1);
+            % occupied blocks
+            \draw[fill=gray!50,draw=black] (0,0) rectangle (1,1);
+            \draw[fill=gray!50] (1,0) rectangle (2,1);
+            \draw[fill=gray!50] (2,0) rectangle (3,1);
+            \draw[fill=gray!50] (3,0) rectangle (4,1);
+            \draw[fill=gray!50] (6,0) rectangle (7,1);
+            \draw[fill=gray!50] (8,0) rectangle (9,1);
+            \draw (9,0) rectangle (10,1);
+            % declare points for arrow start/end and text positions
+            \node at (0,-0.5) (head) {head};
+            \node at (9.5,0) (b9_lower) {};
+            \node at (3,1.4) (n1) {};
+            \node at (4.5,1) (b4) {};
+            \node at (4.5,0) (b4_lower) {};
+            \node at (5,-0.4) (n2) {};
+            \node at (5.5,0) (b5_lower) {};
+            \node at (6.5,-0.4) (n3) {};
+            \node at (7.5,0) (b7_lower) {};
+            \node at (9.5,1) (b9) {};
+            % draw arrows
+            \draw[->, out=0, in=-90] (head) to (b9_lower);
+            \draw[->] (b9) to[bend right] (b4);
+            \draw[->] (b4_lower) to[out=-70,in=180] (n2) to[out=0,in=-110] (b5_lower);
+            \draw[->] (b5_lower) to[out=-30, in=180] (n3) to[out=0, in=-120] (b7_lower);
+        \end{tikzpicture}
+        \caption{After freeing.}
+        \label{fig:pool_deallocation_after}
+    \end{subfigure}
+    \caption{Freeing a block (highlighted) puts it at the head of the free list while setting its next block to the previous head.}
+    \label{fig:pool_deallocation}
 \end{figure}
 
 \section{Stack allocator}
